# english-vocablary

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  database.db  db.sqlite3  docker-compose.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
admin/: asgi.py  settings.py  urls.py  wsgi.py
api/: main.py
api/templates/: index.html
app/: .env  admin.py  commands.py  handler.py  hendler.py  main.py  models.py
app/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py
app/router/: start.py
bot/: .env  admin.py  commands.py  config.py  main.py  middleware.py  vocablary.json
bot/admin/: __init__.py  admin.py  admin_commands.py  broadcast.py  channels.py  clear.py  commands.py  reply.py  start.py  statistics.py  users.py
bot/core/: config.py
bot/database/: __init__.py  base.py  database.py  session.py
bot/database/models/: channels.py  reminders.py  users.py
bot/filters/: admin.py
bot/json/: elementary.json
bot/middleware/: channel.py  saved_db.py  user_activity.py
bot/router/: admin_commands.py  commands.py  help.py  start.py  user_commands.py  users.py
bot/routers/: __init__.py  flashcard.py  get_words.py  help.py  keyboard.py  level.py  message_to_admin.py  reminder.py  review.py  start.py  test_router.py  user_commands.py
bot/services/: reminder_scheduler.py  reminder_service.py
bot/utils/: middleware.py
data/: elementary.json  intermidate.json  preintermediateintermediate.json
migration/: env.py
tests/: conftest.py  test_auth.py  test_data_files.py  test_get_words.py  test_imports.py  test_keyboard.py  test_reminder.py
