[project]
name = "english-vocablary"
version = "0.1.0"
description = ""
authors = [
    {name = "Anasxon Ummataliyev",email = "aummataliy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram[i18n] (>=3.22.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "babel (>=2.17.0,<3.0.0)",
    "redis-dict (>=3.2.5,<4.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
