[tool.poetry]
name = "english-vocablary"
version = "0.1.0"
description = ""
authors = ["Anasxon Ummataliyev <aummataliy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
aiogram = {version = ">=3.29.0,<4.0.0", extras = ["i18n"]}
python-dotenv = ">=1.0.0"
babel = ">=2.17.0,<3.0.0"
redis-dict = ">=3.2.5,<4.0.0"
sqlalchemy = ">=2.0.45,<3.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
alembic = ">=1.17.2,<2.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
aiosqlite = ">=0.22.0,<0.23.0"
greenlet = ">=3.3.0,<4.0.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = ">=0.40.0,<0.41.0"
asyncpg = ">=0.31.0,<0.32.0"

[tool.poetry.dev-dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
